fix hex mapping - rotate them to easier align against scale - grid to edge of map - properly calculate pixel width of each hex

--- a/_sass/_map.scss
+++ b/_sass/_map.scss
@@ -8,9 +8,9 @@ html {
 
 .button-panel {
   position: fixed;
-  top: 21px;
-  left: 224px;
-  z-index: 10;
+  top: 20px;
+  left: 20px;
+  z-index: 100;
 }
 
 button {
@@ -35,6 +35,7 @@ body.map {
   color: white;
   font-size: 20px;
   font-smoothing: antialiased;
+  z-index: 90
 }
 
 .point-of-interest__overlay {
@@ -42,7 +43,7 @@ body.map {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   height: 30px;
-  z-index: -1;
+  z-index: 80;
 }
 
 .point-of-interest__pin {
@@ -66,10 +67,16 @@ body.map {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
+  z-index: 60;
 }
 
-.grid div {
-  float: left;
+.grid-row {
+  position: relative;
+}
+
+.grid-cell {
+  display: inline-block;
 }
 
 .moonfeather .point-of-interest__pin {
@@ -111,12 +118,15 @@ body.map {
 }
 
 .select2-container {
-  position: fixed;
   width: 200px;
-  top: 20px;
-  left: 20px;
-  z-index: 2;
 }
+// .select2-container {
+//   position: fixed;
+//   width: 200px;
+//   top: 20px;
+//   left: 20px;
+//   z-index: 100;
+// }
 
 .hidden {
   display: none;
